--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "backend-livros-ebac-python"
+name = "apipyhton"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi[standart] (>=0.115.12,<0.116.0)"
+    "fastapi (>=0.116.0,<0.117.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "uvicorn (>=0.35.0,<0.36.0)"
 ]
 
 
